--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="myname">Benjamin Strauss</div>
         
         <h2>About Me</h2>
-        <p>I am a Computer Scientist who specializes in natural language processing, artificial intelligence and machine learning. I work as a Data Scientist and Lead Maching Engineer at Accenture Federal Services. <br>I have a Masters of Science in Computer Science and Engineering from <a href="https://cse.osu.edu/">The Ohio State University</a> and a  Bachelors of Science in Computer Engineering from the <a href="http://www.ece.umd.edu/">University of Maryland</a>.</p>
+        <p>I am a Computer Scientist who specializes in natural language processing, artificial intelligence and machine learning. I work as a data scientist and lead machine learning engineer at Accenture Federal Services. <br>I have a Masters of Science in Computer Science and Engineering from <a href="https://cse.osu.edu/">The Ohio State University</a> and a  Bachelors of Science in Computer Engineering from the <a href="http://www.ece.umd.edu/">University of Maryland</a>.</p>
         
         <h2>Publications</h2>
         <ul>
