--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         
         <h2>Publications</h2>
         <ul>
-		
+		<h2>Publications</h2>
+<ul>
+ <h3>2023</h3>
+<li><a href="nan">Accenture at CheckThat! 2023: Impacts of back-translation on subjectivity detection</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect factuality levels of news sources</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Identifying claims with societal impact using NLP data augmentation</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect political bias of news articles and sources</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
+</ul>
+
 			<h3>2017</h3>
 			<li><a href="http://aclweb.org/anthology/W17-2504">Acquisition of Translation Lexicons for Historically Unwritten Languages via Bridging Loanwords</a><br><i>Michael Bloodgood and <b>Benjamin Strauss</b></i><br>Proceedings of the 10th Workshop on Building and Using Comparable Corpora, Association for Computational Linguistics (2017)</li>
 
