--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	
 <ul>
  <h3>2023</h3>
-<li><a href="nan">Accenture at CheckThat! 2023: Impacts of back-translation on subjectivity detection</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
-<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect factuality levels of news sources</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
-<li><a href="nan">Accenture at CheckThat! 2023: Identifying claims with societal impact using NLP data augmentation</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
-<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect political bias of news articles and sources</a><br><i>Tran, Sieu; Rodrigues, Paul; Strauss, Benjamin; Williams, E; </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Impacts of back-translation on subjectivity detection</a><br><i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect factuality levels of news sources</a><br><i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams</i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Identifying claims with societal impact using NLP data augmentation</a><br><i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams </i></li>
+<li><a href="nan">Accenture at CheckThat! 2023: Learning to detect political bias of news articles and sources</a><br><i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams </i></li>
 </ul>
 
 			<h3>2017</h3>
