--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <br>
     I have a Masters of Science in Computer Science and Engineering from <a href="https://cse.osu.edu/">The Ohio State University</a> and a Bachelors of Science in Computer Engineering from the <a href="http://www.ece.umd.edu/">University of Maryland</a>.
   </p>
-
+<h2>Areas of Expertise</h2>
+ <h3>Natural Language Processing (NLP):</h3> Deep expertise in developing and applying NLP techniques for a wide range of applications, including machine translation, sentiment analysis, text summarization, and information extraction. Proficient in utilizing industry-standard NLP libraries and frameworks such as NLTK, spaCy, and Transformers. Demonstrated ability to stay abreast of the latest advancements in NLP, including transformer-based models and large language models, and apply them to solve real-world problems.
+ <br>
+<h3>Artificial Intelligence (AI):</h3>  Extensive knowledge of AI principles and methodologies, encompassing machine learning, deep learning, and knowledge representation. Proven ability to design and implement AI solutions across diverse domains, including customer service, healthcare, and finance, driving transformative outcomes for organizations. Passionate about exploring the ethical implications of AI and promoting responsible AI development and deployment.
+ <br>
+  <h3>Machine Learning (ML)</h3>  Highly skilled in building, training, and deploying machine learning models for various business needs, including predictive modeling, classification, and clustering. Proficient in leveraging ML libraries and frameworks such as scikit-learn, TensorFlow, and PyTorch to develop robust and scalable solutions. Experience in applying advanced ML techniques such as deep learning, reinforcement learning, and ensemble methods to optimize model performance and achieve business objectives.
+ <br>
+ <h3>Leadership and Team Management: </h3> A results-oriented leader with a strong track record of building and motivating high-performing teams, fostering collaboration, and driving successful project execution. Adept at mentoring and developing team members, cultivating a culture of innovation, and creating a positive and productive work environment. Proven ability to effectively communicate technical concepts to both technical and non-technical audiences, facilitating cross-functional collaboration and alignment.
   <h2>Publications</h2>
   <ul>
     <h3>2023</h3>
