--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 <body>
 
   <div class="myname">Benjamin Strauss</div>
+<div class="card">
+  <div class="card-header">
+    <h2>About Me</h2>
+  </div>
+  <p> 
+    I am a Computer Scientist...
+  </p>
+</div>
+
+<div class="card">
+  <div class="card-header">
+  
 
   <h2>About Me</h2>
   <p>
@@ -17,6 +29,12 @@
     <br>
     I have a Masters of Science in Computer Science and Engineering from <a href="https://cse.osu.edu/">The Ohio State University</a> and a Bachelors of Science in Computer Engineering from the <a href="http://www.ece.umd.edu/">University of Maryland</a>.
   </p>
+    </div>
+  <ul>
+    </ul>
+</div>
+
+</div>
 <h2>Areas of Expertise</h2>
  <h3>Natural Language Processing (NLP):</h3> Deep expertise in developing and applying NLP techniques for a wide range of applications, including machine translation, sentiment analysis, text summarization, and information extraction. Proficient in utilizing industry-standard NLP libraries and frameworks such as NLTK, spaCy, and Transformers. Demonstrated ability to stay abreast of the latest advancements in NLP, including transformer-based models and large language models, and apply them to solve real-world problems.
  <br>
