--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="card">
+            <div class="card-content">
   <div class="myname">Benjamin Strauss</div>
-
+            </div>
+        </div>
+    </div>
+              
   <h2>About Me</h2>
   <p>
     I am a Computer Scientist who specializes in natural language processing, artificial intelligence and machine learning. I work as a data scientist and lead machine learning engineer at Accenture Federal Services. 
