--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Strauss</title>
     <meta name="description" content="Benjamin Strauss">
-    <link rel="stylesheet" href="./Benjamin Strauss_files/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
