--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <div class="container">
     <header> 
-        <div class="myname">Benjamin Strauss</div>
+        <div class="myname">Benjamin</div>
+        <div class="myname">Strauss</div>
     </header>
 
     <main>
