--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
                 <ul>
                     <h3>2023</h3>
                     <li>
-                        <a href="file:///C:/Users/ADMIN/Desktop/webpage-main%20(1)/webpage-main/_index2_.html#">Accenture at CheckThat! 2023: Impacts of back-translation on subjectivity detection</a><br>
+                        <a href="#">Accenture at CheckThat! 2023: Impacts of back-translation on subjectivity detection</a><br>
                         <i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams</i>
                         <br>CLEF (Working Notes). 2023.
                     </li>
                     <li>
-                        <a href="file:///C:/Users/ADMIN/Desktop/webpage-main%20(1)/webpage-main/_index2_.html#">Accenture at CheckThat! 2023: Learning to detect factuality levels of news sources</a><br>
+                        <a href="#">Accenture at CheckThat! 2023: Learning to detect factuality levels of news sources</a><br>
                         <i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams</i>
                         <br>CLEF (Working Notes). 2023.
                     </li>
                     <li>
-                        <a href="file:///C:/Users/ADMIN/Desktop/webpage-main%20(1)/webpage-main/_index2_.html#">Accenture at CheckThat! 2023: Identifying claims with societal impact using NLP data augmentation</a><br>
+                        <a href="#">Accenture at CheckThat! 2023: Identifying claims with societal impact using NLP data augmentation</a><br>
                         <i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams</i>
                         <br>CLEF (Working Notes). 2023.
                     </li>
                     <li>
-                        <a href="file:///C:/Users/ADMIN/Desktop/webpage-main%20(1)/webpage-main/_index2_.html#">Accenture at CheckThat! 2023: Learning to detect political bias of news articles and sources</a><br>
+                        <a href="#">Accenture at CheckThat! 2023: Learning to detect political bias of news articles and sources</a><br>
                         <i>Sieu Tran, Paul Rodrigues, Benjamin Strauss, E Williams</i>
                         <br>CLEF (Working Notes). 2023.
                     </li>
